--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Brain Overflow</title>
+  <meta name="theme-color" content="#000000"> 
+  <link rel="manifest" href="manifest.json">
+
 </head>
 
 <body class="h-full">
   <div class="h-full" id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("/sw.js");
+    }
+  </script>
 </body>
 
 </html>
